infrastructure/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.42.1.30
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.homelab.veselabs.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.homelab.veselabs.com"
      allowedRoutes:
        namespaces:
          from: All
